--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
   "version": "1.0.0",
   "description": "A basic example extension with only required keys",
   "start_url": "/",
-  "icons": ["/favicon.png", "/favicon.png"]
+  "icons": ["/favicon.png"]
 }
