--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,16 @@
 {
   "manifest_version": 3,
   "name": "To-Do",
+  "short_name": "To-Do",
   "version": "1.0.0",
-  "description": "A basic example extension with only required keys",
   "start_url": "/",
-  "icons": ["/favicon.png"]
+  "display": "standalone",
+  "description": "A basic example extension with only required keys",
+  "icons": [
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ]
 }
