--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,21 @@
 {
   "manifest_version": 3,
   "name": "To-Do",
+  "short_name": "To-Do",
   "version": "1.0.0",
+  "start_url": "/",
+  "display": "standalone",
   "description": "A basic example extension with only required keys",
-  "homepage_url": "/",
-  "icons": {
-    "48": "/favicon.png",
-    "128": "/favicon.png"
-  }
+  "icons": [
+    {
+      "src": "/imgs/favicon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "/imgs/favicon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
+  ]
 }
